[package]
name = "bp3d-threads"
version = "1.0.0"
authors = ["Yuri Edward <yuri6037@outlook.com>"]
edition = "2021"
description = "Yet another threading library intended to simplify thread pools in BP3D."
license = "BSD-3-Clause"
repository = "https://gitlab.com/bp3d/threads"
readme = "./README.MD"
keywords = ["threading", "thread", "pool"]
categories = ["asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"

[features]
